--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body, html, *{
     padding: 0;
     text-align: center;
 }
+h1 {
+    font-size: 50px;
+}
 .container {
     background-color: antiquewhite;
     width: 93vw; 
@@ -15,6 +18,7 @@ body, html, *{
 }
 
 .card{
+    background-color: bisque;
     border: 2px solid black;
     border-radius: 30px;
     width: 26%;
