--- a/style.css
+++ b/style.css
@@ -28,14 +28,21 @@ h1 {
     background-color: bisque;
     border: 2px solid black;
     border-radius: 30px;
-    /* width: 26%; this makes cards shrink when viewport shrinks instead of stack into 1 column*/
-    width: 50em;
+    width: 26%; /* this makes cards shrink when viewport shrinks instead of stack into 1 column*/
+    /* width: 50em; */
     height: 35rem;
     margin: 2em;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    transition: all 0.3s;
 }
+
+.card:hover {    
+    transform: scale(1.1);
+    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+}
+
 .card-heading {
     font-size: 20px;
 }
@@ -45,5 +52,5 @@ h1 {
     object-fit: cover;
 }
 .card-desc {
-    margin-bottom: ;
+    margin-bottom: 1.5rem;
 }
