--- a/style.css
+++ b/style.css
@@ -27,10 +27,17 @@ body {
     font-family: "Oregano", cursive;
     color: rgb(103, 60, 38);
     transition: all 0.75s;
+    /* using just animation combines everything together */
+    /* animation: 4s linear 0s infinite alternate slidein; */  /* infinite makes it go on forever */
+    animation-name: slidein;
+    animation-duration: 4s;
+    animation-direction: alternate;  /* forwards then backwards */
+    animation-iteration-count: 1.5;
+    animation-timing-function: ease-in-out; /* speed curve of animation */
 }
-@keyframes titleslidein {
-    from {
-      transform: translateX(0);
+@keyframes slidein {
+    from {                                  /* from = 0%, to = 100% */
+      transform: translateX(-50%);
     }
   
     to {
@@ -54,12 +61,11 @@ body {
     justify-content: space-around;
     align-items: center;
 }
-
 .card{
     background-color: rgb(231, 212, 171);
     border: 4px solid rgb(210, 180, 141);
     border-radius: 30px;
-    box-shadow: 12px 12px 2px 1px rgba(141, 111, 46, 0.3);
+    box-shadow: 12px 12px 2px 1px rgba(141, 111, 46, 0.3);  /* format: x-offset y-offset blur spread color */
     width: 26%; /* this makes cards shrink when viewport shrinks instead of stack into 1 column*/
     height: 25rem;
     margin: 2rem auto;
@@ -69,7 +75,18 @@ body {
     justify-content: space-evenly;
     align-items: center;
     transition: all 0.9s;
+    animation: 2s ease-in zoomin;
 }
+@keyframes zoomin {
+    from {
+      transform: scale(0.3);
+    }
+  
+    to {
+      transform: scale(1);
+    }
+  }
+
 /* always start with wider width so it filters down, ALSO: should be placed after wherever the classes inside it are placed */
 @media screen and (max-width: 1300px) {
     body {
@@ -106,18 +123,8 @@ body {
 }
 
 .card:hover {    
-    transform: scale(1.1);
-    box-shadow: 8px 15px rgba(141, 111, 46, 0.5)
-}
-#card-hargow:hover {
-    transform: translateY(-150px);
-    box-shadow: 30px 30px rgb(244, 244, 219);
-}
-#card-siumai:hover {
-    transform: rotate(15deg) scale(3);
-}
-#card-chickenfeet:hover {
-    transform: scale(0.8) scaleX(-1);
+    transform: scale(1.3);
+    box-shadow: 10px 20px 10px 10px rgba(141, 111, 46, 0.5)
 }
 
 .card-heading {
@@ -133,7 +140,15 @@ body {
     border-radius: 15px;
 }
 .card-img:hover {
-    animation: bounce 0.5s
+    animation: bounce ease-out 0.5s 6 alternate;
+}
+@keyframes bounce{
+    from {
+        transform: translateY(0);
+    }
+    to {
+        transform: translateY(-50px);
+    }
 }
 .card-desc {
     margin-bottom: 1.5rem auto;
@@ -149,4 +164,19 @@ body {
     .card-desc {
         font-size: 1.1rem;
     }
+}
+/* hover effects for specific cards */
+#card-hargow:hover {
+    transform: translateY(-150px);
+    box-shadow: 30px 30px rgb(244, 244, 219);
+    background-color: rgb(175, 110, 77);
+    border-color: rgb(150, 195, 152);
+    color: rgb(150, 195, 152);
+}
+#card-siumai:hover {
+    transform: rotate(15deg) scale(3);
+    filter: blur(1px);
+}
+#card-chickenfeet:hover {
+    transform: scale(0.8) scaleX(-1);
 }
