--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     animation-direction: alternate;  /* forwards then backwards */
     animation-iteration-count: 1.5;
     animation-timing-function: ease-in-out; /* speed curve of animation */
+    animation: pulse 2s alternate infinite;
 }
 @keyframes slidein {
     0% {                                  /* from = 0%, to = 100% */
@@ -44,6 +45,14 @@ body {
       transform: translateX(50%);
     }
   }
+@keyframes pulse {
+    0% {
+        transform: scale(0.8);
+    }
+    100% {
+        transform: scale(1.2);
+    }
+}
 .title-container:hover {
     background-color: rgb(175, 110, 77);
     color: rgb(236, 195, 144);
@@ -51,7 +60,7 @@ body {
 }
 
 .container {
-    background-color: rgb(237, 219, 192);
+    background-color: rgba(237, 219, 192, 0.8);
     width: 93vw; 
     margin: 1rem auto;
     padding: 5rem;
@@ -66,7 +75,8 @@ body {
     border: 4px solid rgb(210, 180, 141);
     border-radius: 30px;
     box-shadow: 12px 12px 2px 1px rgba(141, 111, 46, 0.3);  /* format: x-offset y-offset blur spread color */
-    width: 26%; /* this makes cards shrink when viewport shrinks instead of stack into 1 column*/
+    /* width: 26%; */
+    width: 21%;
     height: 25rem;
     margin: 2rem auto;
     padding: 0.8rem;
@@ -78,7 +88,7 @@ body {
     animation: 2s ease-in zoomin;
 }
 @keyframes zoomin {
-    from {
+    0% {
       transform: scale(0.3);
     }
   
@@ -87,6 +97,66 @@ body {
     }
   }
 
+.card:hover {    
+    transform: scale(1.3);
+    box-shadow: 10px 20px 10px 10px rgba(141, 111, 46, 0.5);
+}
+
+.card-heading {
+    font-family: "Playwrite DE Grund", cursive;
+    font-size: 1.4rem;
+    color: rgb(154, 92, 61);
+}
+
+.card-img {
+    height: 55%;
+    width: 90%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+.card-img:hover {
+    animation: bounce ease-out 0.5s 6 alternate;
+}
+@keyframes bounce{
+    from {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-50px);
+    }
+}
+.card-desc {
+    margin-bottom: 1.5rem auto;
+    font-family: "Delius", cursive;
+    color: rgb(167, 118, 81);
+    font-size: 1.3rem;
+}
+@keyframes swim {
+    0% {
+        background-color: rgb(221, 122, 122);
+        left: 50%;
+        bottom: 10%;
+        transform: scale(1.1);
+    }
+    33% {
+        background-color: rgb(221, 122, 191);
+        left: 50%;
+        bottom: 10%;
+        transform: scale(1.1);
+    }
+    66% {
+        background-color: rgb(160, 122, 221);
+        left: 50%;
+        bottom: 10%;
+        transform: scale(1.1);
+    }
+    100% {
+        background-color: rgb(110, 180, 131);
+        left: 50%;
+        bottom: 10%;
+        transform: scale(1.1);
+    }
+}
 /* always start with wider width so it filters down, ALSO: should be placed after wherever the classes inside it are placed */
 @media screen and (max-width: 1300px) {
     body {
@@ -119,65 +189,29 @@ body {
         padding: 3rem;
     }
     .card-heading {
-        font-size: 0.55rem;
-    }
-}
-
-.card:hover {    
-    transform: scale(1.3);
-    box-shadow: 10px 20px 10px 10px rgba(141, 111, 46, 0.5)
-}
-
-.card-heading {
-    font-family: "Playwrite DE Grund", cursive;
-    font-size: 1.4rem;
-    color: rgb(154, 92, 61);
-}
-
-.card-img {
-    height: 55%;
-    width: 90%;
-    object-fit: cover;
-    border-radius: 15px;
-}
-.card-img:hover {
-    animation: bounce ease-out 0.5s 6 alternate;
-}
-@keyframes bounce{
-    from {
-        transform: translateY(0);
-    }
-    100% {
-        transform: translateY(-50px);
-    }
-}
-.card-desc {
-    margin-bottom: 1.5rem auto;
-    font-family: "Delius", cursive;
-    color: rgb(167, 118, 81);
-    font-size: 1.3rem;
-}
-
-@media screen and (max-width: 700px){
-    .card-heading {
         font-size: 1.2rem;
     }
     .card-desc {
-        font-size: 1.1rem;
+            font-size: 1.1rem;
     }
+    
 }
+
 /* hover effects for specific cards */
 #card-hargow:hover {
     transform: translateY(-150px);
     box-shadow: 30px 30px rgb(244, 244, 219);
     background-color: rgb(175, 110, 77);
     border-color: rgb(150, 195, 152);
-    color: rgb(150, 195, 152);
+    /* color: rgb(150, 195, 152); */
 }
 #card-siumai:hover {
     transform: rotate(15deg) scale(3);
-    filter: blur(1px);
 }
 #card-chickenfeet:hover {
     transform: scale(0.8) scaleX(-1);
+}
+#card-turnipcake:hover {
+    /* filter: blur(1px); */
+    animation: swim 2s infinite;
 }
