--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Delius&family=Playwrite+DE+Grund:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap'); */
+/* combined imports */
+@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&family=Delius&family=Playwrite+DE+Grund:wght@100..400&display=swap');
 
 body, html, *{
     box-sizing: border-box;
     text-align: center;
-    /* margin: 0;
-    padding: 0; */
 }
 body {
     margin: 1rem auto;
@@ -27,17 +27,12 @@ body {
     font-family: "Oregano", cursive;
     color: rgb(103, 60, 38);
     transition: all 0.75s;
-    /* using just animation combines everything together */
-    /* animation: 4s linear 0s infinite alternate slidein; */  /* infinite makes it go on forever */
-    animation-name: slidein;
-    animation-duration: 2s;
-    animation-direction: alternate;  /* forwards then backwards */
-    animation-iteration-count: 1.5;
-    animation-timing-function: ease-in-out; /* speed curve of animation */
-    animation: pulse 2s alternate infinite;
+    animation: slidein 2s ease-in-out 1.5 alternate,
+                pulse 2s 4s infinite alternate;
+    /* format: animation: name duration timing-function delay iteration-count direction fill-mode; */
 }
 @keyframes slidein {
-    0% {                                  /* from = 0%, to = 100% */
+    0% {                                 
       transform: translateX(-50%);
     }
   
@@ -47,16 +42,19 @@ body {
   }
 @keyframes pulse {
     0% {
+        transform: scale(1);
+    }
+    50% {
         transform: scale(0.8);
     }
     100% {
         transform: scale(1.2);
     }
 }
+
 .title-container:hover {
     background-color: rgb(175, 110, 77);
     color: rgb(236, 195, 144);
-    transform: rotate(360deg);
 }
 
 .container {
@@ -85,7 +83,7 @@ body {
     justify-content: space-evenly;
     align-items: center;
     transition: all 0.9s;
-    animation: 2s ease-in zoomin;
+    animation: zoomin 2s ease-in;
 }
 @keyframes zoomin {
     0% {
@@ -166,7 +164,7 @@ body {
         width: 70vw;
     }
     .card {
-        width: 43%;
+        width: 45%;
     }
     .card-heading {
         font-size: 0.9rem;
@@ -206,7 +204,7 @@ body {
     /* color: rgb(150, 195, 152); */
 }
 #card-siumai:hover {
-    transform: rotate(15deg) scale(3);
+    transform: rotate(360deg) scale(1.3);
 }
 #card-chickenfeet:hover {
     transform: scale(0.8) scaleX(-1);
