--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Delius&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap'); */
 /* combined imports */
-@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&family=Delius&family=Playwrite+DE+Grund:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oregano:ital@0;1&family=Playwrite+DE+Grund:wght@100..400&display=swap');
 
 body, html, *{
     box-sizing: border-box;
@@ -27,11 +26,11 @@ body {
     font-family: "Oregano", cursive;
     color: rgb(103, 60, 38);
     transition: all 0.75s;
-    animation: slidein 2s ease-in-out 1.5 alternate,
+    animation: slidein_fromleft 2s ease-in-out 1.5 alternate,
                 pulse 2s 4s infinite alternate;
     /* format: animation: name duration timing-function delay iteration-count direction fill-mode; */
 }
-@keyframes slidein {
+@keyframes slidein_fromleft {
     0% {                                 
       transform: translateX(-50%);
     }
@@ -40,15 +39,21 @@ body {
       transform: translateX(50%);
     }
   }
+@keyframes slidein_frombottom {
+    0% {                                 
+      transform: translateY(50%);
+    }
+  
+    100% {
+      transform: translateY(0%);
+    }
+  }
 @keyframes pulse {
     0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(0.8);
+        transform: scale(0.9);
     }
     100% {
-        transform: scale(1.2);
+        transform: scale(1.1);
     }
 }
 
@@ -80,32 +85,26 @@ body {
     padding: 0.8rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     transition: all 0.9s;
-    animation: zoomin 2s ease-in;
+    animation: slidein_frombottom 2s ease-in 1;
 }
-@keyframes zoomin {
-    0% {
-      transform: scale(0.3);
-    }
-  
-    100% {
-      transform: scale(1);
-    }
-  }
-
 .card:hover {    
     transform: scale(1.3);
     box-shadow: 10px 20px 10px 10px rgba(141, 111, 46, 0.5);
+    border-color: rgb(150, 195, 152);
 }
 
-.card-heading {
+.card-heading,
+.card-desc {
     font-family: "Playwrite DE Grund", cursive;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     color: rgb(154, 92, 61);
 }
-
+.card-desc {
+    margin-bottom: 1.3rem;
+}
 .card-img {
     height: 55%;
     width: 90%;
@@ -113,48 +112,17 @@ body {
     border-radius: 15px;
 }
 .card-img:hover {
-    animation: bounce ease-out 0.5s 6 alternate;
+    animation: bounce ease-out 0.5s 4 alternate;
 }
 @keyframes bounce{
-    from {
+    0% {
         transform: translateY(0);
     }
     100% {
         transform: translateY(-50px);
     }
 }
-.card-desc {
-    margin-bottom: 1.5rem auto;
-    font-family: "Delius", cursive;
-    color: rgb(167, 118, 81);
-    font-size: 1.3rem;
-}
-@keyframes swim {
-    0% {
-        background-color: rgb(221, 122, 122);
-        left: 50%;
-        bottom: 10%;
-        transform: scale(1.1);
-    }
-    33% {
-        background-color: rgb(221, 122, 191);
-        left: 50%;
-        bottom: 10%;
-        transform: scale(1.1);
-    }
-    66% {
-        background-color: rgb(160, 122, 221);
-        left: 50%;
-        bottom: 10%;
-        transform: scale(1.1);
-    }
-    100% {
-        background-color: rgb(110, 180, 131);
-        left: 50%;
-        bottom: 10%;
-        transform: scale(1.1);
-    }
-}
+
 /* always start with wider width so it filters down, ALSO: should be placed after wherever the classes inside it are placed */
 @media screen and (max-width: 1300px) {
     body {
@@ -190,7 +158,7 @@ body {
         font-size: 1.2rem;
     }
     .card-desc {
-            font-size: 1.1rem;
+        font-size: 1.1rem;
     }
     
 }
@@ -198,18 +166,10 @@ body {
 /* hover effects for specific cards */
 #card-hargow:hover {
     transform: translateY(-150px);
-    box-shadow: 30px 30px rgb(244, 244, 219);
-    background-color: rgb(175, 110, 77);
-    border-color: rgb(150, 195, 152);
-    color: rgb(150, 195, 152);
 }
 #card-siumai:hover {
     transform: rotate(360deg) scale(1.3);
 }
 #card-chickenfeet:hover {
     transform: scale(0.8) scaleX(-1);
-}
-#card-turnipcake:hover {
-    /* filter: blur(1px); */
-    animation: swim 2s infinite;
 }
