--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 .container {
-    background-color: rgba(237, 219, 192, 0.8);
+    background-color: rgba(237, 219, 192, 0.6);
     width: 93vw; 
     margin: 1rem auto;
     padding: 5rem;
@@ -77,7 +77,7 @@ body {
     background-color: rgb(231, 212, 171);
     border: 4px solid rgb(210, 180, 141);
     border-radius: 30px;
-    box-shadow: 12px 12px 2px 1px rgba(141, 111, 46, 0.3);  /* format: x-offset y-offset blur spread color */
+    box-shadow: 12px 12px 5px 1px rgba(141, 111, 46, 0.3);  /* format: x-offset y-offset blur spread color */
     /* width: 26%; */
     width: 21%;
     height: 25rem;
@@ -119,7 +119,7 @@ body {
         transform: translateY(0);
     }
     100% {
-        transform: translateY(-50px);
+        transform: translateY(-30px);
     }
 }
 
@@ -174,5 +174,5 @@ body {
     transform: scale(0.8) scaleX(-1);
 }
 #card-turnipcake:hover {
-    transform: skew(-10deg);
+    transform: skew(-10deg) translateX(-75px);
 }
